fix contrast error on forecast icons when display:none

--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -143,6 +143,10 @@
 		margin-bottom: .25em;
 	}
 
+	.forecast-icons-box i {
+		color: var(--almost-white);
+	}
+
 	.forecast-article-box {
 		background-color: var(--viridian);
 		border-radius: 10px;
